# love-openharmony

./: .gitignore  .gitmodules  README.md  Techmino  action.yml  build-profile.json5  oh-package-lock.json5  oh-package.json5  pack_techmino_game_love.sh
.github/workflows/: package.yml
.trae/documents/: 将 love-android 迁移到 HarmonyOS（NDK）.md
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  DisableLuaJITJit.cmake  entry_napi.cpp
entry/src/main/cpp/sdl/: Index.d.ts
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/: SDLLaunchState.ets  SDLWindowState.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
ohos/: .gitignore  README_OHOS.md  build-profile.json5  oh-package.json5
ohos-love2d/AppScope/: app.json5
ohos-love2d/entry/src/main/: module.json5
ohos-love2d/entry/src/main/cpp/: CMakeLists.txt
ohos-love2d/entry/src/main/cpp/types/libentry/: oh-package.json5
ohos-love2d/entry/src/main/ets/pages/: Index.ets
ohos-love2d/entry/src/main/resources/resfile/: game.love.new
ohos/AppScope/: app.json5
ohos/AppScope/resources/base/element/: string.json
ohos/entry/: oh-package.json5
ohos/entry/src/main/: module.json5
ohos/entry/src/main/cpp/: entry_napi.cpp
ohos/entry/src/main/cpp/types/libSDL3/: Index.d.ts  oh-package.json5
ohos/entry/src/main/ets/entryability/: EntryAbility.ets
ohos/entry/src/main/ets/pages/: Index.ets
ohos/entry/src/main/resources/base/element/: string.json
ohos/hvigor/: hvigor-config.json5
ohos/oh_modules/.ohpm/: lock.json5
tools/: restore_openal_soft.sh  switch_openal_soft.sh
